# gitsec

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: gitsec.example.yml
gitsec/: cli.py  version.py
gitsec/core/: config_loader.py  depsdev_client.py  github_api.py  repo_filter.py
gitsec/data/: __init__.py  checks_db.py  checks_metadata.db
gitsec/models/: __init__.py  finding.py
gitsec/modules/checks/org/: default_repository_permission.py  members_can_create_repositories.py  mfa_required.py  repo_commit_signing_required.py  repo_pr_required.py  repo_push_protection.py  repo_tag_deletion_protection.py  runners_scope.py  secrets_scope.py  sso_enabled.py  user_access.py
gitsec/modules/checks/repo/: commit_signing_required.py  pr_required.py  push_protection.py  runners_scope.py  tag_deletion_protection.py
gitsec/modules/dependency_scanning/: dependency_parser.py  scanner.py
gitsec/modules/secret_scanning/: custom_plugins.py  secrets.py
gitsec/output/: __init__.py  excel_writer.py  formatters.py  html_writer.py
gitsec/utils/: __init__.py  cli_utils.py  modules_registry.py
